# clipboard

./: .gitignore  ClipboardManager.slnx  Contexto.docx  Contexto.txt  HYPRLAND_SETUP.md  LICENSE  PROGRESS.md  README.md  install-arch-cpp.sh  install-arch.sh  install-cpp.sh  install-net.sh  uninstall.sh
aur/: .SRCINFO  PKGBUILD
clipboard-manager/: CMakeLists.txt  build.sh  com.clipboard.manager.desktop
clipboard-manager/src/: main.cpp
clipboard-manager/src/app/: bootstrap.cpp  bootstrap.h
clipboard-manager/src/database/: clipboard_db.cpp
clipboard-manager/src/ml/: embedding_service.cpp  embedding_service.h  language_detector.cpp.backup  ocr_service.h
clipboard-manager/src/services/: clipboard_service.cpp  search_service.cpp  search_service.h
clipboard-manager/src/ui/: clipboard_item_widget.cpp  clipboard_item_widget.h  main_window.cpp  main_window.h
cpp-app/: CMakeLists.txt
cpp-app/src/: main.cpp
cpp-app/src/app/: bootstrap.cpp
cpp-app/src/database/: clipboard_db.cpp  clipboard_db.h
cpp-app/src/grpc/: daemon_client.cpp  daemon_client.h
cpp-app/src/ml/: embedding_service.cpp  embedding_service.h  language_detector.cpp  language_detector.h  ocr_service.cpp
cpp-app/src/services/: clipboard_service.cpp  clipboard_service.h  search_service.cpp  search_service.h
cpp-app/src/ui/: clipboard_item_widget.cpp  main_window.cpp  main_window.h
daemon/: CMakeLists.txt  README.md  build.sh  clipboard-daemon-simple.sh
daemon/proto/: clipboard.proto
daemon/src/: clipboard_monitor.cpp  clipboard_monitor.h  grpc_server.cpp  grpc_server.h  main.cpp  wayland_monitor.cpp  wayland_monitor.cpp.backup  wayland_monitor.h  x11_monitor.cpp  x11_monitor.h
daemon/systemd/: clipboard-daemon.service
docs/: design.md  requirements.md  tasks.md
net-clipboard-manager/: ClipboardManager.slnx
net-clipboard-manager/ClipboardManager.App/: App.axaml  App.axaml.cs  ClipboardManager.App.csproj  app.manifest
net-clipboard-manager/ClipboardManager.App/Controls/: CodePreviewControl.axaml  CodePreviewControl.axaml.cs
net-clipboard-manager/ClipboardManager.App/Models/: ClipboardItemViewModel.cs
net-clipboard-manager/ClipboardManager.App/Services/: HotkeyService.cs
net-clipboard-manager/ClipboardManager.App/Views/: MainWindow.axaml
net-clipboard-manager/ClipboardManager.Core/Models/: ClipboardItem.cs  ClipboardType.cs  SearchResult.cs  ThemeConfig.cs
net-clipboard-manager/ClipboardManager.Core/Services/: ClipboardService.cs  OcrQueueService.cs
net-clipboard-manager/ClipboardManager.Data/: ClipboardDbContextFactory.cs  ClipboardManager.Data.csproj
net-clipboard-manager/ClipboardManager.Data/Repositories/: SearchRepository.cs
net-clipboard-manager/ClipboardManager.ML/Services/: LanguageDetectionService.cs  TesseractOcrService.cs
scripts/: backup-hyprland.sh  configure-hyprland-clipboard.sh  download-ml-models.sh  download-models.sh  install-deps.sh  setup-projects.sh  setup-wayland.sh  toggle-clipboard-manager.sh  uninstall.sh
scripts/lib/: common.sh
src/ClipboardManager.App/: App.axaml  App.axaml.cs  ClipboardManager.App.csproj  Program.cs  ViewLocator.cs
src/ClipboardManager.App/Controls/: CodePreviewControl.axaml  CodePreviewControl.axaml.cs
src/ClipboardManager.App/Models/: ClipboardItemViewModel.cs
src/ClipboardManager.App/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
src/ClipboardManager.App/Views/: MainWindow.axaml  MainWindow.axaml.cs
src/ClipboardManager.Core/: ClipboardManager.Core.csproj
src/ClipboardManager.Core/Interfaces/: IClipboardRepository.cs
src/ClipboardManager.Core/Models/: Configuration.cs
src/ClipboardManager.Core/Services/: ClassificationService.cs  ClipboardService.cs  OcrQueueService.cs  SecurityService.cs  ThemeService.cs
src/ClipboardManager.Daemon.Client/: ClipboardManager.Daemon.Client.csproj  DaemonClient.cs  clipboard.proto
src/ClipboardManager.Data/: ClipboardDbContext.cs
src/ClipboardManager.Data/Repositories/: ClipboardRepository.cs  SearchRepository.cs
src/ClipboardManager.ML/: ClipboardManager.ML.csproj
src/ClipboardManager.ML/Services/: BpeTokenizer.cs  CodeClassifierService.cs  EmbeddingService.cs  LanguageDetectionService.cs  TesseractOcrService.cs
src/ClipboardManager.WaylandDaemon/: ClipboardManager.WaylandDaemon.csproj  Program.cs
themes/: README.md  cliphist-style.json  default.json
