cmake_minimum_required(VERSION 3.20)
project(clipboard-manager-cpp VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Find packages
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK4 REQUIRED gtk4)
pkg_check_modules(GTKMM4 REQUIRED gtkmm-4.0)
pkg_check_modules(SQLITE3 REQUIRED sqlite3)
pkg_check_modules(TESSERACT REQUIRED tesseract)
pkg_check_modules(OPENCV REQUIRED opencv4)
set(OpenCV_LIBS opencv_core opencv_imgproc opencv_imgcodecs)
pkg_check_modules(PROTOBUF REQUIRED protobuf)
pkg_check_modules(GRPC REQUIRED grpc++ grpc)

# ONNX Runtime
find_library(ONNXRUNTIME_LIB onnxruntime PATHS /usr/lib /usr/local/lib)
set(ONNXRUNTIME_INCLUDE_DIR /usr/include/onnxruntime)

# Create grpc directory
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/grpc)

# Source files
set(SOURCES
    src/main.cpp
    src/ui/main_window.cpp
    src/ui/clipboard_item_widget.cpp
    src/database/clipboard_db.cpp
    src/ml/embedding_service.cpp
    src/ml/language_detector.cpp
    src/ml/ocr_service.cpp
    src/services/clipboard_service.cpp
    src/services/search_service.cpp
    src/grpc/daemon_client.cpp
)

# Proto files
set(PROTO_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/../daemon/proto/clipboard.proto
)

# Generate protobuf/grpc code
foreach(PROTO ${PROTO_FILES})
    get_filename_component(PROTO_NAME ${PROTO} NAME_WE)
    get_filename_component(PROTO_DIR ${PROTO} DIRECTORY)
    set(PROTO_SRCS "${CMAKE_CURRENT_BINARY_DIR}/${PROTO_NAME}.pb.cc")
    set(PROTO_HDRS "${CMAKE_CURRENT_BINARY_DIR}/${PROTO_NAME}.pb.h")
    set(GRPC_SRCS "${CMAKE_CURRENT_BINARY_DIR}/${PROTO_NAME}.grpc.pb.cc")
    set(GRPC_HDRS "${CMAKE_CURRENT_BINARY_DIR}/${PROTO_NAME}.grpc.pb.h")
    
    add_custom_command(
        OUTPUT ${PROTO_SRCS} ${PROTO_HDRS} ${GRPC_SRCS} ${GRPC_HDRS}
        COMMAND protoc
        ARGS --cpp_out=${CMAKE_CURRENT_BINARY_DIR}
             --grpc_out=${CMAKE_CURRENT_BINARY_DIR}
             --plugin=protoc-gen-grpc=`which grpc_cpp_plugin`
             -I${PROTO_DIR}
             ${PROTO}
        DEPENDS ${PROTO}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
    
    list(APPEND SOURCES ${PROTO_SRCS} ${GRPC_SRCS})
endforeach()

# Executable
add_executable(clipboard-manager ${SOURCES})

# Include directories
target_include_directories(clipboard-manager PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_BINARY_DIR}
    ${GTK4_INCLUDE_DIRS}
    ${GTKMM4_INCLUDE_DIRS}
    ${SQLITE3_INCLUDE_DIRS}
    ${TESSERACT_INCLUDE_DIRS}
    ${OPENCV_INCLUDE_DIRS}
    ${PROTOBUF_INCLUDE_DIRS}
    ${GRPC_INCLUDE_DIRS}
    ${ONNXRUNTIME_INCLUDE_DIR}
)

# Link libraries
target_link_libraries(clipboard-manager PRIVATE
    ${GTK4_LIBRARIES}
    ${GTKMM4_LIBRARIES}
    ${SQLITE3_LIBRARIES}
    ${TESSERACT_LIBRARIES}
    ${OpenCV_LIBS}
    ${PROTOBUF_LIBRARIES}
    ${GRPC_LIBRARIES}
    ${ONNXRUNTIME_LIB}
    pthread
)

# Compile options
target_compile_options(clipboard-manager PRIVATE
    ${GTK4_CFLAGS_OTHER}
    ${GTKMM4_CFLAGS_OTHER}
    -Wall -Wextra -O3
)

# Install
install(TARGETS clipboard-manager DESTINATION bin)

# Uninstall target: removes files listed in install_manifest.txt generated by "cmake --install" / "ninja install"
file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
"if(EXISTS \"${CMAKE_BINARY_DIR}/install_manifest.txt\")\n  file(READ \"${CMAKE_BINARY_DIR}/install_manifest.txt\" _contents)\n  string(REGEX REPLACE \"\\r?\\n\" \";\" _files \"${_contents}\")\n  foreach(_f ${_files})\n    if(EXISTS \"${_f}\")\n      file(REMOVE \"${_f}\")\n      message(STATUS \"Removed ${_f}\")\n    endif()\n  endforeach()\nelse()\n  message(STATUS \"No install_manifest.txt found\")\nendif()\n")

add_custom_target(uninstall
    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake
    COMMENT "Uninstall: remove installed files listed in install_manifest.txt"
)
